--- a/package.json
+++ b/package.json
@@ -9,13 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/error-message": "^2.0.1",
     "@hookform/resolvers": "^3.3.4",
+    "@tanstack/match-sorter-utils": "^8.11.8",
     "@tanstack/react-query": "^5.28.2",
+    "@tanstack/react-table": "^8.13.2",
     "axios": "^1.6.7",
+    "camelcase": "^8.0.0",
+    "date-fns": "^3.5.0",
+    "lucide-react": "^0.358.0",
     "next": "14.1.3",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.0",
+    "react-hot-toast": "^2.4.1",
     "yup": "^1.4.0"
   },
   "devDependencies": {
